--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TALHA</title>
+  <title>simpleloginproject</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>                        
       </button>
      
-      <a class="navbar-brand" href="#">Talha</a>
+      <a class="navbar-brand" href="#"></a>
 	  
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -41,7 +41,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                             <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password">   
-                  </div>
+                        </div>
 
                         <button type="submit" class="btn btn-primary">Login</button>
                    </form>
@@ -58,12 +58,25 @@
 <div class="container" >
     <div class="col-md-6" >
         <div id="logbox"  >
-            <form id="signup" method="post">
-                <h1>Create an Account</h1>
-				      <input name="username" type="username" placeholder="Username" class="input name"/>
-                <input name="email" type="email" placeholder="Email address" required="required" class= "input email" />
-                <input name="password" type="password" placeholder="Enter Password" required="required" class="input pass"/>
-                <input type="submit" value="Sign me up!" class="inputButton"/>
+            <form id="signup" method="post" action="/register">
+                <h1>Create a new account</h1>
+
+                    <div class="form-group">
+                    <label for="exampleInputFile">username</label>
+                    <input type="text" id="username" class="form-control" placeholder="username" name="username" required="required">
+                    </div>
+ 
+                    <div class="form-group">
+                    <label for="exampleInputFile">email</label>
+                    <input type="text" id="email" class="form-control" placeholder="email" name="email" required="required">
+                    </div>
+
+                    <div class="form-group">
+                    <label for="exampleInputFile">password</label>
+                    <input type="password" id="password" class="form-control" placeholder="password" name="password" required="required">
+                    </div>                
+
+                <input type="submit" value="Sign up" class="btn btn-primary"/>
 
             </form>
         </div>
